# run-cppcheck

./: CMakeLists.txt  Makefile  README.md  config.cpp  config.h  main.cpp
.github/workflows/: build-ubuntu.yml  build-windows.yml
